--- a/projects/2FA-main/style.css
+++ b/projects/2FA-main/style.css
@@ -16,12 +16,17 @@ body {
     text-align: center;
     max-width: 500px;
     width: 100%;
-    box-sizing: border-box; /* Ensure padding is included in width calculation */
+    box-sizing: border-box;
+}
+
+h1 {
+    margin-bottom: 20px;
+    font-size: 32px;
 }
 
 .input-group {
     margin-bottom: 30px;
-    text-align: left; /* Align label and input to the left */
+    text-align: left;
 }
 
 label {
@@ -36,7 +41,7 @@ input {
     font-size: 16px;
     border: 2px solid #ccc;
     border-radius: 6px;
-    box-sizing: border-box; /* Ensure padding is included in width calculation */
+    box-sizing: border-box;
 }
 
 button {
@@ -47,7 +52,7 @@ button {
     border-radius: 6px;
     cursor: pointer;
     font-size: 18px;
-    box-sizing: border-box; /* Ensure padding is included in width calculation */
+    box-sizing: border-box;
 }
 
 button:hover {
@@ -73,7 +78,24 @@ button:hover {
     margin-top: 20px;
     font-size: 20px;
     color: #555;
-    display: none; /* Hide timer initially */
+    display: none;
+}
+
+.progress-container {
+    width: 100%;
+    background-color: #f3f3f3;
+    border-radius: 25px;
+    margin-top: 20px;
+    height: 10px; /* Set the height to make the progress bar thinner */
+    display: none; /* Initially hidden */
+}
+
+.progress-bar {
+    width: 0%;
+    height: 100%;
+    background-color: #007bff; /* Set the progress bar color to blue */
+    border-radius: 25px;
+    transition: width 1s linear;
 }
 
 .alert {
@@ -87,7 +109,7 @@ button:hover {
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     opacity: 1;
-    transition: opacity 1s ease-out; /* Add transition for fade out effect */
+    transition: opacity 1s ease-out;
 }
 
 .alert-error {
